More readable vote system

--- a/css/main.scss
+++ b/css/main.scss
@@ -104,7 +104,8 @@ a {
         position: relative;
     }
     .vote {
-        float: right;
+        float: left;
+        width: 6vw;
     }
     .plus, .minus {
         text-decoration: none;
